; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_cs4281.c_cs4281chan_setblocksize.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_cs4281.c_cs4281chan_setblocksize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sc_chinfo = type { i32, i64, i32, %struct.sc_info* }
%struct.sc_info = type { i32 }

@.str = private unnamed_addr constant [46 x i8] c"cs4281chan_setblocksize: blksz %d Setting %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @cs4281chan_setblocksize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cs4281chan_setblocksize(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sc_chinfo*, align 8
  %8 = alloca %struct.sc_info*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.sc_chinfo*
  store %struct.sc_chinfo* %11, %struct.sc_chinfo** %7, align 8
  %12 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %13 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %12, i32 0, i32 3
  %14 = load %struct.sc_info*, %struct.sc_info** %13, align 8
  store %struct.sc_info* %14, %struct.sc_info** %8, align 8
  %15 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %16 = call i32 @adcdac_go(%struct.sc_chinfo* %15, i32 0)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.sc_info*, %struct.sc_info** %8, align 8
  %19 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = sdiv i32 %20, 2
  %22 = call i32 @MIN(i32 %17, i32 %21)
  %23 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %24 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 8
  %25 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %26 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %29 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @sndbuf_resize(i32 %27, i32 2, i32 %30)
  %32 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %33 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %32, i32 0, i32 1
  store i64 0, i64* %33, align 8
  %34 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %35 = call i32 @adcdac_prog(%struct.sc_chinfo* %34)
  %36 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @adcdac_go(%struct.sc_chinfo* %36, i32 %37)
  %39 = load i32, i32* %6, align 4
  %40 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %41 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %39, i32 %42)
  %44 = call i32 @DEB(i32 %43)
  %45 = load %struct.sc_chinfo*, %struct.sc_chinfo** %7, align 8
  %46 = getelementptr inbounds %struct.sc_chinfo, %struct.sc_chinfo* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  ret i32 %47
}

declare dso_local i32 @adcdac_go(%struct.sc_chinfo*, i32) #1

declare dso_local i32 @MIN(i32, i32) #1

declare dso_local i32 @sndbuf_resize(i32, i32, i32) #1

declare dso_local i32 @adcdac_prog(%struct.sc_chinfo*) #1

declare dso_local i32 @DEB(i32) #1

declare dso_local i32 @printf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
